Fixed 4by3 spacings

--- a/graphics/css/4x3.css
+++ b/graphics/css/4x3.css
@@ -4,7 +4,7 @@
 
 #run-game {
     font-size: 48px;
-    line-height: 52px;
+    line-height: 64px;
 }
 
 #timer {
